custom-manifests/security/allow-cart.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cart-to-redis
  namespace: divesh-boutique

spec:
  podSelector:
    matchLabels:
      app: redis-cart

  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: cartservice

  policyTypes:
  - Ingress
