custom-manifests/security/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: divesh-boutique
spec:
  podSelector: {}
  policyTypes:
  - Ingress
